2011-12-23  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* testsuite/tr1/2_general_utilities/shared_ptr/cons/
	weak_ptr_expired.cc: Modify to PASS instead of XFAIL.

2011-12-23  Kai Tietz  <ktietz@redhat.com>

	* config/os/mingw32-w64/os_defines.h (__USE_MINGW_ANSI_STDIO): Define.

2011-12-23  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/c_global/cinttypes: Update comments that refer to TR1.

2011-12-23  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/49204
	* include/std/future (future_errc): Implement LWG 2056.

2011-12-23  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/regex.h (match_results::size_type): Use
	allocator_traits.

2011-12-22  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/48362
	* testsuite/libstdc++-prettyprinters/48362.cc: New.

2011-12-22  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/48362
	* python/libstdcxx/v6/printers.py (StdTuplePrinter): Handle empty
	tuples.

2011-12-20  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51365
	* include/std/tuple (_Tuple_impl): Check __is_final as well as
	is_empty.
	* testsuite/20_util/tuple/51365.cc: New.

2011-12-19  Benjamin Kosnik  <bkoz@redhat.com>

	* libsupc++/eh_tm.cc (free_any_cxa_exception): Use
	__GCC_ATOMIC_INT_LOCK_FREE, not _GLIBCXX_ATOMIC_BUILTINS_4.

2011-12-19  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/performance/25_algorithms/search_n.cc: Disambiguate
	local variable.

2011-12-18  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* doc/xml/manual/iterators.xml: Replace "sect1" with "section".
	* doc/xml/manual/algorithms.xml: Likewise.
	* doc/html/manual/iterators.html: Likewise.
	* doc/html/manual/algorithms.html: Likewise.

2011-12-15  Paolo Carlini  <paolo.carlini@oracle.com>
	    Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51558
	* include/bits/functional_hash.h (struct hash): Add static_assert.
	* src/compatibility-c++0x.cc: Adjust compatibility definitions.